# humtemp

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: aws_logical.drawio  aws_network.drawio
docs/images/: aws_network.drawio  datamodel.drawio
src/humtemp/: configuration.py  database.py  entities.py  main.py
src/humtemp/dto/: __init__.py  observation.py  summary.py
tests/integration/: test_main.py
tests/unit/: test_database.py  test_main.py
tests_manual/: loadtest.py
